searchfilters: convert core components to new framework